# curly-octo-guacamole

./: ACCOUNT_CREATION_TEST_README.md  Makefile  README.md  pyproject.toml  pytest.ini  report.json  run_tests.py  test_account_creation.py
app/: main.py
n8n/: workflow.json
party1/: README.md  main.py  mpc_config.json  n8n_mcp_config.json  n8n_mcp_server.py  n8n_rest_server.py  n8n_setup_guide.md  n8n_workflow_example.json
party2/: README.md  main.py
party3/: mpc_config.json
src/curly_octo_guacamole/api/controllers/: controller.py
src/curly_octo_guacamole/api/examples/: api.py
src/curly_octo_guacamole/ui/: simple_pw.py  simple_simple_pw.py
src/curly_octo_guacamole/ui/examples/: create_account.py  create_event.py  create_profile.py  create_tag_affinity.py  create_user.py  create_user_event.py  navigate_to_home.py
src/curly_octo_guacamole/ui/framework/: __init__.py  accounts.py  assertions.py  controller.py  utils.py  waits.py
src/curly_octo_guacamole/ui/framework/page_objects/: account_page.py  affinity_page.py  event_page.py  home_page.py  profile_page.py  user_event_page.py  user_page.py
tests/: conftest.py  playwright_runner.py  test_account_creation_framework.py
tests/api/: test__demo_api.py  test_account.py  test_crawl.py  test_event.py  test_get_metadata.py  test_get_root.py  test_profile.py  test_tagaffinity.py  test_url.py  test_user.py  test_userevent.py  test_utils.py
tests/ui/: test_create_entities.py  test_create_entities_po.py  test_create_scenario.py  test_entity_navigation.py  test_report.py  test_simple_navigation.py  test_utils.py
